assets/css/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.alert a,
.alert code {
    @apply text-white
}

@layer components {
    .classic-main {
        @apply min-h-screen lg:w-[950px] mx-auto mt-10 p-5 lg:p-0
    }
}

@layer utilities {
    .horizontal-scrollbar::-webkit-scrollbar-track {
        @apply shadow-inner rounded bg-white
    }
    .horizontal-scrollbar::-webkit-scrollbar {
        @apply h-3
    }
    .horizontal-scrollbar::-webkit-scrollbar-thumb {
        @apply rounded shadow-inner bg-primary
    }
}

